Fixing z-index.

--- a/x-platform/public/dm-xplatform/controllers/dm-xplatform-space/dm-xplatform-space.less
+++ b/x-platform/public/dm-xplatform/controllers/dm-xplatform-space/dm-xplatform-space.less
@@ -9,6 +9,7 @@
     left: ~"calc(50% - 55px)";
     width: 110px;
     height: 30px;
+    z-index: 10;
   }
 }
 .dm-spacesidebar {
@@ -18,6 +19,7 @@
     left: 0;
     right: 0;
     height: 30px;
+    z-index: 10;
   }
 }
 
